# TARSPolicyClassification

./: README.md  notebook.ipynb  pyproject.toml
documents_functions_data/: document_function_test.csv  document_function_train.csv
