[tool.poetry]
name = "policy_classification"
version = "0.1.0"
description = ""
authors = ["Stanislaw Gizinski <s.gizinski84@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flair = "^0.9"
spacy = "^3.1.4"
pandas = "^1.3.4"
sklearn = "^0.0"
plotly = "^5.3.1"
jupyter = "^1.0.0"
transformers = "^4.12.3"
datasets = "^1.15.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
